--- a/euangelium/bautismo.html
+++ b/euangelium/bautismo.html
@@ -27,15 +27,20 @@
     <li class="li"><a href="#0">INTRODUCCIÓN</a></li>
       <li class="li"><a href="#1">QUÉ ES EL BAUTISMO </a></li>
       <li class="li"><a href="#2">EL BAUTISMO DE JUAN</a></li>
-      <li class="li"><a href="#3">EL BAUTISMO DE JUAN Y EL DE JESÚS</a></li>
+      <li class="li"><a href="#3">EL BAUTISMO DE JUAN Y EL DEL SEÑOR</a></li>
       <li class="li"><a href="#4">LA CIRCUNCISIÓN Y EL BAUTISMO</a></li>
       <li class="li"><a href="#5">BAUTISMO A NIÑOS</a></li>
       <li class="li"><a href="#6"></a></li>
       <li class="li"><a href="#7"></a></li>
-   
-  
   </ol>
   </div>
+  <!-- /////////////////////////////////////////////// -->
+   <section class="control">
+    <H2>ENLACES INTERNOS</H2>
+    <div class="div"><a href="../lectio/marcos.html" class="a">EV DE MARCOS</a> </div>
+    <div class="div"><a href="" class="a"></a> </div>
+    <div class="div"><a href="" class="a"></a> </div>
+   </section>
   <!-- /////////////////////////////////////////////// -->
 <section id="0">
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
