--- a/historia/concilios/concilioNiceaI.html
+++ b/historia/concilios/concilioNiceaI.html
@@ -20,14 +20,26 @@
   <section id="inicio">
     <h1>CONCILIO DE NICEA 325</h1>
     <ol>
+      <li class="li"><a href="#enlaces">ENLACES INTERNOS</a></li>
       <li class="li"><a href="#section1">CONTEXTO</a></li>
       <li class="li"><a href="#section2">BIOGRAFÍA DE ARRIO</a></li>
       <li class="li"><a href="#section3">BIOGRAFÍA DE ATANASIO</a></li>
       <li class="li"><a href="#section4">FUNDAMENTOS DE ARRIO</a></li>
       <li class="li"><a href="#section5">FUNDAMENTOS CATÓLICOS</a></li>
-    
     </ol>
   </section>
+  <!-- ///////////////////////////////////////////// -->
+
+      <section class="control" id="enlaces">
+        <h2>ENLACES </h2>
+        <div class="div"><a href="../../lectio/marcos.html" class="a">EVANGELIO DE MARCOS</a></div>
+        <div class="div"><a href="" class="a"></a></div>
+        <div class="div"><a href="" class="a"></a></div>
+
+  
+       </section>
+
+  <!-- ///////////////////////////////////////////// -->
   <section id="section1">
 <h2>Contexto</h2>
 
