--- a/lectio/marcos.html
+++ b/lectio/marcos.html
@@ -38,6 +38,11 @@
     </ol>
     </div>
     <!-- /////////////////////////////////////////////// -->
+<section>
+
+</section>
+
+    <!-- /////////////////////////////////////////////// -->
 <section id="0">
 <h2 class="titulo">INTRODUCCIÓN</h2>
 <H3 class="subtitulo">EL AUTOR</H3>
@@ -160,7 +165,8 @@ En resumen, la motivación detrás de la escritura del Evangelio de Marcos por M
   <p>
   Texto: (NBJ)<br>
 Marcos 1:1-8 <br>
-1. Comienzo de la Buena Nueva de Jesús, el Cristo, Hijo de Dios. <br> 
+<b>
+  1. Comienzo de la Buena Nueva de Jesús, el Cristo, Hijo de Dios. <br> 
 2. Como está escrito en el profeta Isaías:  <br>
     “Mira, yo envío a mi mensajero delante de ti,<br>  
     que preparará tu camino;  <br>
@@ -172,10 +178,13 @@ Marcos 1:1-8 <br>
 6. Juan iba vestido de pelo de camello, con un cinturón de cuero en la cintura, y comía langostas y miel silvestre.  <br>
 7. Y predicaba, diciendo: “Después de mí, viene uno más poderoso que yo, y no soy digno de desatar, inclinándome, la correa de sus sandalias. <br> 
 8. Yo os he bautizado con agua, pero él os bautizará con el Espíritu Santo”.<br><br>
- 1. Versículo 1: El "comienzo del Evangelio"
-Este primer versículo actúa como el título del Evangelio de Marcos, destacando a Jesús como el Cristo (el Mesías) y Hijo de Dios. Marcos anuncia inmediatamente la identidad divina de Jesús. A diferencia de los otros evangelios sinópticos, Marcos no presenta una genealogía ni un relato del nacimiento, sino que entra directamente en la misión de Jesús. Al decir el Cristo, y mencionar al profeta isaias, en el siguiente versiculo, hace pensar que se dirigia a una audiencia judia, o paganos que ya leian las escrituras.<br><br>
+</b>
+<b>  Versículo 1: </b>El "comienzo del Evangelio"
+Este primer versículo actúa como el título del Evangelio de Marcos, destacando a Jesús como el Cristo (el Mesías) y Hijo de Dios. Marcos anuncia inmediatamente la identidad divina de Jesús. A diferencia de los otros evangelios sinópticos, Marcos no presenta una genealogía ni un relato del nacimiento, sino que entra directamente en la misión de Jesús. Al decir el Cristo, y mencionar al profeta isaias, en el siguiente versiculo, hace pensar que se dirigia a una audiencia judia, o paganos que ya leian las escrituras. <br>
+<h4>TEMA: DIVINIDAD DE JESUCRISTO ==><a href="../historia/concilios/concilioNiceaI.html">CONCILIO DE NICEA, Jesús es verdadero Dios</a></h4>
+<br><br>
 
- 2. Versículos 2-3: La cita profética<br><br>
+<b>  Versículos 2-3:</b> La cita profética<br><br>
 Marcos cita una mezcla de Malaquías 3:1 y Isaías 40:3 para señalar que el ministerio de Juan el Bautista cumple las profecías del Antiguo Testamento. Juan es el "mensajero" que prepara el camino para el Señor, cumpliendo las Escrituras que anunciaban la llegada del Mesías.<br><br>
 
 - Malaquías 3:1: "He aquí que envío mi mensajero delante de ti, que preparará el camino".<br>
@@ -183,31 +192,31 @@ Marcos cita una mezcla de Malaquías 3:1 y Isaías 40:3 para señalar que el min
 
 Juan aparece como la voz profética que anuncia y prepara el camino para el Mesías, invitando a los judíos a la conversión.<br><br>
 
- 3. Versículo 4: El bautismo de Juan<br>
+  Versículo 4: El bautismo de Juan<br>
 Juan está bautizando en el desierto, predicando un bautismo de arrepentimiento para el perdón de los pecados. Este bautismo simboliza una preparación espiritual para recibir al Mesías. La figura de Juan en el desierto es significativa, ya que en la tradición bíblica el desierto es un lugar de prueba y purificación.<br><br>
 
-- El bautismo de Juan es un acto de conversión en preparación para el reino de Dios. Es simbólico y prefigura el bautismo de Jesús, que será con el Espíritu Santo.<br><br>
+<h4>TEMA: EL BAUTISMO ==> <a href="../euangelium/bautismo.html">EL BAUTISMO DE JUAN Y EL DEL SEÑOR</a></h4>
 
- 4. Versículo 5: Gran afluencia de gente<br>
+ <b> Versículo 5:</b> Gran afluencia de gente<br>
 El éxito del ministerio de Juan es notable. Todo Judea y Jerusalén acuden a él, mostrando una profunda necesidad espiritual en el pueblo. El acto de confesar sus pecados y ser bautizados revela que el mensaje de Juan impacta a la población, llamando a un cambio profundo en sus vidas.<br><br>
 
- 5. Versículo 6: Vestimenta y dieta de Juan<br>
+<b>  Versículo 6:</b> Vestimenta y dieta de Juan<br>
 La descripción de la vestimenta y dieta de Juan el Bautista recuerda a la figura de Elías, otro gran profeta del Antiguo Testamento. El pelo de camello y el cinturón de cuero (ver 2 Reyes 1:8) lo relacionan con Elías, quien también era un profeta que se enfrentaba a tiempos de crisis espiritual. La conexión entre Juan y Elías es importante porque el profeta Malaquías anunció que Elías volvería antes del Día del Señor (Mal 4:5-6).<br><br>
 
 - Langostas y miel silvestre: La dieta austera de Juan simboliza su renuncia a las comodidades y su enfoque en la misión de preparar el camino para el Señor.
 <br><br>
- 6. Versículo 7: La predicación de Juan<br>
+<b>  Versículo 7:</b> La predicación de Juan<br>
 Juan el Bautista proclama la venida de alguien mucho más poderoso que él. Reconoce su humildad al decir que no es digno ni de desatar las correas de las sandalias de aquel que vendrá. Esta es una referencia a un trabajo reservado para esclavos, lo que subraya la grandeza del Mesías en comparación con Juan. Esta declaración refuerza que Juan es solo el precursor, mientras que Jesús será el verdadero Salvador.<br><br>
 
- 7. Versículo 8: Diferencia entre los bautismos<br>
+<b>  Versículo 8:</b> Diferencia entre los bautismos<br>
 Juan distingue entre su bautismo, que es con agua y un símbolo externo de conversión, y el bautismo del que vendrá después, que será con el Espíritu Santo. Esta promesa del Espíritu anticipa el Pentecostés (Hechos 2), cuando el Espíritu Santo será derramado sobre los seguidores de Jesús.<br><br>
-
+<h4>TEMA: EL BAUTISMO ==> <a href="../euangelium/bautismo.html">EL BAUTISMO DE JUAN Y EL DEL SEÑOR</a></h4>
  Interpretación teológica y espiritual:<br><br>
 
 - Jesús como el Hijo de Dios: El Evangelio comienza declarando la identidad de Jesús como el Hijo de Dios. Esto es fundamental para la cristología de Marcos: Jesús es más que un maestro o profeta; es el mismo Hijo de Dios.<br>
 - Juan el Bautista como precursor: Juan no solo llama al arrepentimiento, sino que anuncia la llegada inminente de la salvación. Su humildad y misión profética preparan a las personas para el encuentro con Cristo.<br>
 - El bautismo y la conversión: El tema del bautismo en esta perícopa subraya la importancia de la purificación espiritual como preparación para el encuentro con el Señor. Aunque el bautismo de Juan es simbólico, apunta al bautismo que Jesús instituirá, el cual trae el Espíritu Santo y transforma la vida del creyente.<br>
-  
+
  Aplicación en la vida cristiana:<br>
 
 1. Llamado a la conversión: Juan nos recuerda la necesidad de prepararnos espiritualmente para recibir a Cristo, lo que implica una conversión genuina, la confesión de nuestros pecados y la búsqueda del perdón.<br>
@@ -221,6 +230,180 @@ Este pasaje es un preludio importante a los eventos que seguirán en el Evangeli
     <!-- ********************************************* -->
 <section id="010911">
   <h2 class="subtitulo">El bautismo de Jesús 010911</h2>
+  <div class="01">
+    <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
+    <ol> 
+      <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
+    <p>Leer al menos estas versiones y elegir una básica, teniendo en cuenta las variantes</p>
+      <OL class="cita">
+        <LI >JERUSALÉN</LI>
+        <LI>LATINOAMERICANA</LI>
+        <LI>VERSIÓN GRIEGA (LXX- TISCHENDORF)</LI>
+        <LI>VERSIÓN LATINA (VULGATA)</LI>
+        <LI>VERSIÓN JUDÍA (KADOSH)</LI>
+        <LI>NVI</LI>
+        <LI>RV60</LI>
+        <li>otras</li>
+      </OL>
+      <p><b>"En aquellos días, vino Jesús desde Nazaret de Galilea y fue bautizado por Juan en el Jordán. <br>
+        En cuanto salió del agua, vio que los cielos se rasgaban y que el Espíritu, en forma de paloma, descendía sobre él. <br>
+        Y se oyó una voz desde los cielos: 'Tú eres mi Hijo amado; en ti me complazco'."</b></p> <hr><hr>
+<!-- ************************************************** -->
+  <h2 class="subtitulo">LA LECTURA DEL TEXTO</h2>
+  <ol>
+    <li>Tener presente el contexto: el autor y su intención y los destinatarios:sus necesidades y expectativas (Contexto Histórico y literario) </li>
+    <li>Es Evangelio: Cómo es Buena Noticia para los destinatarios</li>
+    <li>Determinar el SENTIDO LITERAL DEL TEXTO</li>
+    <li></li>
+  </ol>
+  <h2 class="subtitulo">TEXTOS PARALELOS</h2>
+  <p>
+    Mateo 3, 13-17: <br>
+
+Mateo ofrece un relato más detallado del encuentro entre Jesús y Juan el Bautista. En este pasaje, Juan inicialmente se resiste a bautizar a Jesús, diciendo: "Yo necesito ser bautizado por ti, ¿y tú vienes a mí?". Jesús responde que es necesario hacerlo para "cumplir toda justicia". Después de bautizarlo, el Espíritu de Dios desciende en forma de paloma y se escucha una voz del cielo que dice: "Este es mi Hijo amado, en quien me complazco".<br><br>
+
+Lucas 3, 21-22:<br>
+El Evangelio de Lucas presenta el bautismo de Jesús de manera más breve. Lucas menciona que Jesús fue bautizado "mientras oraba" y que el cielo se abrió, y el Espíritu Santo descendió sobre él en forma de paloma. La voz celestial también declara: "Tú eres mi Hijo amado; en ti me complazco". Lucas subraya el aspecto de la oración y no entra en detalles sobre el diálogo entre Jesús y Juan.<br><br>
+Juan 1, 29-34:<br>
+Aunque el Evangelio de Juan no relata directamente el acto del bautismo, Juan el Bautista da testimonio de haber visto al Espíritu Santo descender sobre Jesús como una paloma. En su testimonio, el Bautista declara: "He aquí el Cordero de Dios, que quita el pecado del mundo". El énfasis está en el testimonio de Juan sobre la identidad de Jesús como el Hijo de Dios y el Mesías, revelado por el Espíritu que descendió sobre él.
+  </p>
+  <p>Comparación entre los relatos:<br>
+    Marcos es más conciso, centrando la atención en el acontecimiento y en la manifestación divina sin muchos detalles adicionales.<br><br>
+    Mateo incluye el diálogo entre Juan y Jesús, lo que resalta la humildad de Cristo y su disposición a cumplir la voluntad de Dios.<br><br>
+    Lucas añade el detalle de la oración de Jesús durante su bautismo, lo que refleja la importancia de la relación de Jesús con el Padre.<br><br>
+    Juan ofrece un testimonio diferente, donde el bautismo es implícito, y el énfasis se pone en el papel de Juan el Bautista como testigo del Espíritu que desciende sobre Jesús.</p>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">EL AUTOR</h2>
+    <ol class="cita">
+      <li>OCUPACIÓN</li>
+      <li>LLAMAMIENTO-CONVERSIÓN</li>
+      <li>MISIÒN</li>
+      <li>VIDA</li>
+    </ol>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">EL TEXTO </h2>
+    <ol>
+      <li class="cita">PROPÓSITO DEL AUTOR</li>
+      <li class="cita">ORIGEN DEL TEXTO</li>
+      <li class="cita">FECHA DE COMPOSICIÓN</li>
+      <li class="cita">IDEAS CENTRALES DEL TEXTO</li>
+    </ol>
+    <p>
+<b>Versículo 9:</b> "En aquellos días, vino Jesús desde Nazaret de Galilea y fue bautizado por Juan en el Jordán." <br><br>
+
+Jesús, originario de Nazaret, una pequeña y humilde aldea en Galilea, acude voluntariamente al bautismo de Juan.  Quien, aunque sin pecado, se somete a un bautismo de arrepentimiento. Con ello, Jesús se solidariza con la humanidad pecadora y marca el inicio de su misión pública.<br><br>
+<b>Versículo 10:</b> "En cuanto salió del agua, vio que los cielos se rasgaban y que el Espíritu, en forma de paloma, descendía sobre él."<br><br>
+
+Este versículo revela el carácter teofánico del evento, es decir, una manifestación divina. Los "cielos rasgados" simbolizan que la separación entre el cielo y la tierra se está abriendo para permitir la intervención divina. El Espíritu Santo desciende sobre Jesús en forma de paloma, una imagen que sugiere paz, pureza y la presencia del Espíritu de Dios en su misión.<br>
+El descenso del Espíritu es un acto de unción para el ministerio de Jesús. Como el Mesías (el "Ungido"), recibe el poder y la guía del Espíritu Santo para cumplir la voluntad del Padre.<br><br>
+
+<b>Versículo 11:</b> "Y se oyó una voz desde los cielos: 'Tú eres mi Hijo amado; en ti me complazco'."<br><br>
+
+Esta declaración celestial confirma la identidad de Jesús como el Hijo de Dios. La voz de Dios Padre desde el cielo es una confirmación pública del amor y aprobación divina hacia Jesús. Al decir "Hijo amado", se enfatiza la relación única entre Jesús y el Padre. La expresión "en ti me complazco" revela que todo lo que Jesús hará es conforme a la voluntad divina.
+    </p>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">CONTEXTO DE LOS DESTINATARIOS</h2>
+    <ol>
+      <li class="cita">FACTORES INTERNOS</li>
+      <li class="cita">FACTORES EXTERNOS </li>
+      <li class="cita">QUÉ EXPECTATIVAS TENIAN</li>
+    </ol>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">GÉNERO LITERARIO</h2>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">COMENTARIOS PATRÍSTICOS</h2>
+  <div>
+    <h2 class="cita">. San Ignacio de Antioquía:</h2>
+    <p>San Ignacio menciona el bautismo de Jesús como parte de su carta a los efesios, destacando la importancia de este evento en la revelación de Cristo como el Hijo de Dios: <br>
+      - Para Ignacio, el bautismo de Jesús es visto como un momento clave donde la humanidad es testigo de su verdadera identidad, al ser proclamado "Hijo amado" por el Padre y ungido por el Espíritu Santo.
+      </p>
+  </div>
+  <div>
+    <h2 class="cita">San Ireneo de Lyon:</h2>
+    <p>En su obra Adversus Haereses, San Ireneo ve el bautismo de Jesús como una nueva creación:<br>
+      - Así como el Espíritu de Dios se movía sobre las aguas en la creación (Génesis 1, 2), en el bautismo de Jesús, el Espíritu nuevamente desciende sobre las aguas, marcando el inicio de la nueva creación en Cristo. Para Ireneo, el bautismo de Jesús no solo marca el comienzo de su ministerio público, sino el comienzo de la redención del hombre.
+      </p>
+  </div>
+  <div>
+    <h2 class="cita">San Justino Mártir:</h2>
+    <p>San Justino relaciona el bautismo de Jesús con el cumplimiento de la profecía mesiánica de Isaías:<br>
+      - En su Diálogo con Trifón, Justino interpreta el descenso del Espíritu Santo sobre Jesús como el cumplimiento de la promesa de que el Mesías estaría lleno del Espíritu del Señor (Isaías 11, 2). Justino subraya que el bautismo de Jesús no es solo una simple inmersión en agua, sino un momento de revelación mesiánica.
+      </p>
+  <div>
+    <h2 class="cita">San Cirilo de Jerusalén</h2>
+    <p>En sus Catequesis Mistagógicas, San Cirilo de Jerusalén utiliza el bautismo de Jesús para explicar el sacramento del bautismo cristiano:<br>
+      - San Cirilo destaca que, en el bautismo de Jesús, los cristianos encuentran un modelo para su propio bautismo. El descenso del Espíritu Santo y la voz del Padre sobre Jesús también ocurren en el bautismo de cada cristiano: somos ungidos por el Espíritu y reconocidos como hijos de Dios.
+      </p>
+  <div>
+    <h2 class="cita">. San Ambrosio de Milán:</h2>
+    <p>San Ambrosio, en su tratado Sobre los Misterios, reflexiona sobre el significado del bautismo de Jesús:<br>
+      - Ambrosio conecta el bautismo de Jesús con la regeneración espiritual. Él afirma que Jesús, al ser bautizado, no fue purificado, pues no tenía pecado, sino que purificó las aguas del bautismo para que los creyentes pudieran ser santificados a través de ellas. Al recibir el Espíritu, Jesús consagra el sacramento del bautismo, permitiendo que el Espíritu descienda también sobre los que se bautizan en su nombre.
+      </p>
+  <div>
+    <h2 class="cita"> San Gregorio Nacianceno:</h2>
+    <p>San Gregorio Nacianceno, en su Oración 39 (Sobre las Teofanías), ve el bautismo de Jesús como una manifestación trinitaria:<br>
+      - Para San Gregorio, el bautismo de Cristo es uno de los momentos donde se revela de manera clara la Santísima Trinidad. El Hijo es bautizado, el Espíritu desciende en forma de paloma, y el Padre habla desde el cielo. Esto subraya que, en el bautismo, los cristianos son incorporados en la vida trinitaria.
+      </p>
+  <div>
+    <h2 class="cita">San Agustín de Hipona:</h2>
+    <p>San Agustín también comenta sobre el bautismo de Jesús en varias de sus obras, particularmente en sus sermones y en su obra Contra Faustum:<br>
+      - San Agustín interpreta el bautismo de Jesús como una acción que purifica las aguas para que la humanidad pueda ser purificada a través del bautismo. Jesús no necesitaba ser bautizado, pero lo hace para establecer un camino para la salvación de los creyentes. Agustín enfatiza que el bautismo cristiano imita y participa en este acto de Cristo.
+      </p>
+      <div>
+        <h2 class="cita">Reflexiones</h2>
+        <p>Los comentarios patrísticos sobre el bautismo de Jesús destacan la profundidad teológica de este evento. Los Padres de la Iglesia lo vieron como un momento de revelación trinitaria, el inicio de la misión de Jesús y el modelo para el bautismo cristiano. <br> Además, subrayaron la naturaleza sacramental del bautismo, no solo como un acto de arrepentimiento, sino como el medio a través del cual los creyentes son santificados y hechos hijos de Dios, siguiendo el ejemplo de Cristo.</p>
+      </div>
+  </div>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">COMENTARIOS MODERNOS</h2>
+<!-- ************************************************** -->
+
+  <h2 class="subtitulo">EL MENSAJE PARA LOS DESTINATARIOS</h2>
+</ol>
+</div>
+<!-- ****************************************************************** -->
+<div class="02">
+<h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
+<ol>
+  <li class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</li>
+  <li class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</li>
+  <li class="cita">QUE ME DICE A MI/NOSOTROS</li>
+  <li class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</li>
+</ol>
+</div>
+<!-- ****************************************************************** -->
+<div class="03">
+<h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
+<ol> 
+  <li class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</li>
+  <li class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</li>
+  <li class="cita">RESPUESTAS DE MI ENTORNO</li>
+  <li class="cita">MI RESPUESTA</li>
+  <li class="cita">COMO HACERLA REALIDAD Y VIDA</li>
+</ol>
+</div>
+<!-- ****************************************************************** -->
+<div class="04">
+<h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
+<ol>
+  <li class="cita">COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
+  <li class="cita">MODELO DE CONVERSIÓN</li>
+  <li class="cita">COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
+  <li class="cita">COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
+  <li class="cita">COMO APLICARLO A TODAS MIS REALIDADES</li>
+  <li class="cita">COMO COMPARTIRLO</li>
+  <li class="cita">CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
+  <li class="cita">HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
+</ol>
+  </div>
+  <!-- ****************************************************************** -->
+
 </section>
     <!-- ********************************************* -->
 <section id="011213">
