--- a/salud/MedidasCarlos.html
+++ b/salud/MedidasCarlos.html
@@ -18,23 +18,7 @@
     th {
         background-color: #f2f2f2;
     }
-    div{
-      display: contents;
-    }
-    .a{
-      border: brown 2px solid;
-      padding: 0.5em;
-      margin-right: 1em;
-    }
-    .control{
-      border: brown 4px double;
-      padding: 1em;
-    }
-
-    .var{
-      background-color: peru;
-      color: white;
-    }
+  
 </style>
 </head>
 <body>
@@ -66,20 +50,20 @@
       </section>
  <section class="control">
     <h2>MEDICIONES</h2>
-      <div ><a href="" class="a">GLUCOSA</a></div>
-      <div ><a href="./PresionSis.html" class="a var">PRESIÓN SISTÓLICA</a></div>
-      <div ><a href="" class="a">PRESIÓN SIASTOLICA</a></div>
-      <div ><a href="" class="a">PULSO</a></div>
-      <div ><a href="" class="a">TEMPERATURA</a></div>
-      <div ><a href="" class="a">OXIGENACIÓN</a></div>
-      <div ><a href="" class="a">PESO</a></div>
+      <div class="div"><a href="" class="a">GLUCOSA</a></div>
+      <div class="div"><a href="./PresionSis.html" class="a var">PRESIÓN SISTÓLICA</a></div>
+      <div class="div"><a href="" class="a">PRESIÓN SIASTOLICA</a></div>
+      <div class="div"><a href="" class="a">PULSO</a></div>
+      <div class="div"><a href="" class="a">TEMPERATURA</a></div>
+      <div class="div"><a href="" class="a">OXIGENACIÓN</a></div>
+      <div class="div"><a href="" class="a">PESO</a></div>
  </section> <br>
  <section class="control">
   <h2>VARIABLES </h2>
-  <div ><a href="./Ejercicios.html" class="a">EJERCICIO</a></div>
-  <div><a href="" class="a"></a></div>
-  <div><a href="" class="a"></a></div>
-  <div><a href="" class="a"></a></div>
+  <div class="div" ><a href="./Ejercicios.html" class="a">EJERCICIO</a></div>
+  <div class="div"><a href="" class="a"></a></div>
+  <div class="div"><a href="" class="a"></a></div>
+  <div class="div"><a href="" class="a"></a></div>
  </section>
 
    
