--- a/euangelium/biblia/SolaScriptura.html
+++ b/euangelium/biblia/SolaScriptura.html
@@ -45,7 +45,7 @@
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p> El concepto de Sola Scriptura (solo la Escritura) es una de las principales doctrinas de la Reforma Protestante del siglo XVI. Afirma que la Biblia es la única fuente de autoridad infalible para la fe y la práctica cristiana. Según esta doctrina, todas las enseñanzas y tradiciones de la Iglesia deben estar basadas únicamente en la Escritura.</p>
   <p>donde dice que todo debe estar unicamente en la Biblia</p>
-  <p>Y si no está en la Bibliano se debe creer</p>
+  <p>Y si no está en la Biblia no se debe creer</p>
   <p>Cristo no escribió ningun libro, él confió en lo que se transmitió</p>
   <p>lo que tenemos es recuerdos e interpretaciones, más aún en el caso de Marcos y Lucas</p>
   <P>Cual es la función de los maestros en la iglesia</P>
@@ -59,6 +59,7 @@
   <P> como hizo las personas hasta que apareció la Biblia 300 años después</P>
   <p>Como la iglesia puede poner sobre si, a su obra, la Biblia</p>
   <p>el tema es doble, la escritura y su interpretación</p>
+  <p>Si la biblia es la norma como solucionar el tema del canon, hay una lista de los 12 apóstoles pero donde encuentra una lista de los libros inspirados</p>
 </section>
 <!-- ****************************************************************** -->
 <section id="02">
