--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -19,12 +19,25 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
-       <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+    <h1 class="init">LECTIO INTRO</h1>
+       <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
+ <!-- ENLACE A PÁGINAS **********************************************************-->
+ <section id="libros">
 
+  <div>
+    <H2>ENLACES EXTERNOS</H2>
+    <ol>
+      <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BIBLICA</a></li>
+      <li class="li"><a href="./TextosMemo.html">TEXTOS MEMO</a></li>
+      <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
+      <li class="li"><a href="../lectio/marcos.html">MARCOS</a></li>
+      <li class="li"><a href="../lectio/apocalipsis.html">APOCALIPSIS</a></li>
+     </ol>
+   </div>
     <!-- ENLACE internos **********************************************************-->
     <div class="enlace">
+      <H2>ENLACES INTERNOS</H2>
       <ol>
         <li class="li"><a href="#libros">ENLACE A LIBROS</a></li>
         <li class="li"><a href="#intro">INTRODUCCIÓN</a></li>
@@ -33,23 +46,9 @@
         <li class="li"><a href="#02">PROCESO MEDITATIO</a></li>
         <li class="li"><a href="#03">PROCESO ORATIO</a></li>
         <li class="li"><a href="#04">PROCESO CONTEMPLATIO</a></li>
-        <li class="li"><a href="#05"></a></li>
-       
+        <li class="li"><a href="#05"> </a></li>
       </ol>
       </div>
-  
-    <!-- ENLACE A PÁGINAS **********************************************************-->
-     <section id="libros">
-
-       <div>
-         <H2>ENLACES A LIBROS</H2>
-         <ol>
-           <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BIBLICA</a></li>
-           <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
-           <li class="li"><a href="../lectio/marcos.html">MARCOS</a></li>
-           <li class="li"><a href="../lectio/apocalipsis.html">APOCALIPSIS</a></li>
-          </ol>
-        </div>
       </section>
     <!-- ***************************************************************************** -->
      <section id="intro">
