--- a/euangelium/biblia/biblia.html
+++ b/euangelium/biblia/biblia.html
@@ -28,7 +28,7 @@
         <li class="li"><a href="./hermeneutica.html ">HERMENÉUTICA</a></li>
         <li class="li"><a href="./Inspiracion.html">INSPIRACIÓN</a></li>
         <li class="li"><a href="./PalabraDDios.html">PALABRA DE DIOS</a></li>
-        <li class="li"><a href="">CANON</a></li>
+        <li class="li"><a href="./CanonBiblico.html">CANON</a></li>
         <li class="li"><a href="">LENGUA BIBLICAS</a></li>
         <li class="li"><a href="/euangelium/biblia/traducciones.html">TRADUCCIONES</a></li>
         <li class="li"><a href="./SolaScriptura.html">SOLA SCRIPTURA</a></li>
