--- a/Magisterio/index.html
+++ b/Magisterio/index.html
@@ -29,7 +29,8 @@
         <ol>
           <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCICLICAS Y DOCUMENTOS</a></li>
           <li class="li"><a href="./DerechoCanonico.html">DERECHO CANÓNICO</a></li>
-        </ol>
+          <li class="li"><a href=""></a></li>
+          <li class="li"><a href=""></a></li>
       </div>
     </section>
 </body>
