--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -662,7 +662,31 @@
 
     <h2 id="dogmas">LOS DOGMAS MARIANOS</h2> <br>
     LA MATERNIDAD DIVINA <br>
-    Es primero preciso reconocer que Jesús es Verdadero Dios y verdadero Hombre. Es la llamada unión hipostática.
+    Es primero preciso reconocer que Jesús es Verdadero Dios y verdadero Hombre. Es la llamada unión hipostática. o por partes:
+    <ol>
+      <li>María es madre de Jesús</li>
+      <li>Jesús es Dios, no de la trinidad sino de Jesús que es Dios</li>
+      <li>2Pe 1,1</li>
+      <li>Jn 20,28</li>
+      <li>Col 2,9</li>
+      <li>Ti 2,13</li>
+      <li>Ap 1,8</li>
+      <li>Fil 2,6</li>
+      <li>Jn 10, 30-33</li>
+      <li>Jn 1,1</li>
+     <li>Mc 2,6 ss Se le acusa de Hacerse Dios</li>
+     <li>Lc 1,42 Madre del Señor</li>
+     <li>Concilio de Efeso 431 <br>El problema es Cristológico <br>
+      La relación entre la humanidad y divinidad en Cristo <br>
+      Nestorio preferia llamar a María, CristoTokos; lo que esta bien en cuanto lo que afirma pero no en cuanto a lo que niega. <br>
+       Cirilo de Alejandría dice que es CristoTokos. <br> Significa que de las dos naturalezas resulta una unica persona. Es decir que El verbo verdaderamente se ha hecho carne Jn 1,14<br>
+       No se trata que un hombre nacido de La virgen se le añade el Verbo, sino que el Verbo esta presente desde la concepción. Lc 1,28 ss <br>
+     </li>
+     <li>Lo que se quiere afirma es que en Jesús no hay división, Dios se ha hecho hombre, el que nace en Belén, el que predica y hace milagros y el que muere en la cruz y resucita</li>
+    <li>Es madre de Dios,No porque Jesús halla tomado de ella su naturaleza divina, sino porque es la madre del verbo nacido en la carne </li>
+    <li>Maria el arca de la nueva alianza, porque la nube cubrió el arca así la nube cubrió a la Virgen</li>
+    <li>Y asi como el arca estubo en la casa de Cbededon 3 meses así La virgen estubo con Isabel tres meses. </li>
+    </ol>
     <br>
     HIPOSTASIS significa: realidad. <br>
     Flp 2:6 Él compartía la naturaleza divina, y no le parecía indebida la igualdad con Dios, <br>
