--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -18,7 +18,7 @@
         <a href="../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
+    <!-- ******************************************************* -->
     <h1 class="init">APOLOGÍA</h1>
    
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
@@ -61,10 +61,13 @@
           <H2 class="cita">I</H2>
           <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
           <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
+          <h2 class="cita">L</h2>
+          <li class="li"><a href="../euangelium/laLey.html">LA LEY</a></li>
           <H2 class="cita">O</H2>
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
           <H2 class="cita">P</H2>
           <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
+          <li class="li"><a href="../euangelium/purgatorio.html">PURGATORIO</a></li>
           <H2 class="cita">S</H2>
           <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
           <li class="li"><a href="./sabat.html">SABAT</a></li>
