--- a/euangelium/bautismo.html
+++ b/euangelium/bautismo.html
@@ -264,8 +264,22 @@
     <br>
     <br>
 <h3 class="cita">OBJECIONES </h3>
-    a. No necesitan el bautismo porque no tienen pecado. <br>
-    El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.<br><br>
+<ol>
+  <li>Finalidad del bautismo</li>
+  <p>Ga 3,27 Revestirse de Cristo, ser uno con ël</p>
+  <li>  No necesitan el bautismo porque no tienen pecado.</li>
+<p>  El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.</p>
+  <li>Tienen que tener uso de razón</li>
+  <p>Hch 8, el eunuco y Felipe <br> 
+  Hch 16,30-31 El carcelero y el eunuco primero recibieron la palabra y luego el bautismo, por eso dicen se necesita primero tener uso de razón <br>
+  Lo que muestra los textos es que necesita uso de razón es para comprender las escrituras, no para ser bautizado <br>
+  En el carcelero lo muestra, su familia no recibió la palabra y todos fueron bautizados en la fe del carcelero <br>
+  Hch 2-38-39 muestra el bautismo de adultos y niños
+
+  </p>
+</ol>
+   
+
     Dicen: <br>
     Mt 19,13-15 Lc 18,15-17 <br>
     <br>
