--- a/euangelium/laLey.html
+++ b/euangelium/laLey.html
@@ -17,110 +17,69 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init">ALIMENTOS</h1>
+<h1 class="init">LA LEY</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
 
 <!-- ****************************************************************** -->
 
-<section id="00">
+<section id="0">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="#01">INTRO</a></li>
-      <li class="li"><a href="#02">ALIMENTOS</a></li>
-      <li class="li"><a href="#03">SOL</a></li>
-      <li class="li"><a href="#04">AGUA</a></li>
-      <li class="li"><a href="#05"></a></li>
+     <li class="li"><a href="#1">INTRODUCCIÓN</a></li>
+     <li class="li"><a href="#2">LOS 10 MANDAMIENTOS</a></li>
+     <li class="li"><a href="#3">EL SÁBADO</a></li>
+     <li class="li"><a href="#4"></a></li>
+     <li class="li"><a href="#5"></a></li>
+     <li class="li"><a href="#6"></a></li>
+     <li class="li"><a href="#7"></a></li>
 
     </ol>
 
   </div>
 </section>
 <!-- ****************************************************************** -->
-<section id="01">
+<section id="1">
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p>
-    Existe un delicado balance entre los alimentos, ejercicio, aire, sol,agua, estado anímico, objetivos vitales
+
   </p>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="02">
-  <h2 class="subtitulo">ALIMENTOS</h2>
- <ol>
-  <li>AZUFRE </li>
-  <p>para apoyar al higado en la desintoxicación (GLUTATION)</p>
-  <p>para eliminar la toxicidad <br> huevos(2 al día), pescado, palta, brócoli, repollo, zanahoria, ajo, cebolla, espincas, arandanos, coco, espárragos</p>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+<section id="2">
+  <h2 class="subtitulo">LOS 10 MANDAMIENTOS</h2>
+  <p>¿Se cambiarón los mandamientos?  </p>
+<ol>
+  <li>Ex 20,16-17</li>
+  <p>La mujer era una propiedad de hombre <br>
+  Sólo se referia al hombre, y no a la actitud de la mujer</p>
+
+
+</ol>
+</section>
+<!-- ****************************************************************** -->
+<section id="3">
+  <h2 class="subtitulo"> EL SÁBADO</h2>
+  <OL>
+    <li>Heb 4,8 Un nuevo día</li>
+    <p> El texto muestra el cambio a un nuevo día </p>
+    <li>Is 1,13</li>
+    <p>Muestra que se estaba cambiando el sentido del día de descanso hasta acerlo abominable para el Señor</p>
+    <li>Col 2,16</li>
+    <p>Que nadie los critique por no guardar el sábado</p>
+    <li>Rom 14,1-6</li>
+    <p>Tolerancia de ambos lados de vista, es para Dios si se guarda como si no se hace</p>
+    <li>Mt 5,20</li>
+    <p>Muestra lo que dice la ley y copmo la ha de vivir el cristiano</p>
+  </OL>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="03">
-  <h2 class="subtitulo">SOL</h2>
- <ol>
-  <li>al menos 10 minutos diarios</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="04">
-  <h2 class="subtitulo">AGUA</h2>
- <ol>
-  <li>Depende de varios factores: temporada, edad, actividad fisica, </li>
-  <li>la deshidratación sube la presión</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="05">
-  <h2 class="subtitulo"></h2>
- <ol>
-
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="06">
+<section id="4">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -128,7 +87,23 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="07">
+<section id="5">
+  <h2 class="subtitulo"></h2>
+  <p>
+
+  </p>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="6">
+  <h2 class="subtitulo"></h2>
+  <p>
+
+  </p>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="7">
   <h2 class="subtitulo"></h2>
 <p>
 
