--- a/euangelium/purgatorio.html
+++ b/euangelium/purgatorio.html
@@ -13,114 +13,58 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="./01formacion.html" class="nombre"> APOLOGIA</a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init">ALIMENTOS</h1>
+<h1 class="init">PURGATORIO</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
 
 <!-- ****************************************************************** -->
 
-<section id="00">
+<section id="0">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="#01">INTRO</a></li>
-      <li class="li"><a href="#02">ALIMENTOS</a></li>
-      <li class="li"><a href="#03">SOL</a></li>
-      <li class="li"><a href="#04">AGUA</a></li>
-      <li class="li"><a href="#05"></a></li>
+     <li class="li"><a href="#1">INTRODUCCIÓN</a></li>
+     <li class="li"><a href="#2">EL SUFRIMIENTO</a></li>
+     <li class="li"><a href="#3"></a></li>
+     <li class="li"><a href="#4"></a></li>
+     <li class="li"><a href="#5"></a></li>
+     <li class="li"><a href="#6"></a></li>
+     <li class="li"><a href="#7"></a></li>
 
     </ol>
 
   </div>
 </section>
 <!-- ****************************************************************** -->
-<section id="01">
+<section id="1">
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p>
-    Existe un delicado balance entre los alimentos, ejercicio, aire, sol,agua, estado anímico, objetivos vitales
+
   </p>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="02">
-  <h2 class="subtitulo">ALIMENTOS</h2>
- <ol>
-  <li>AZUFRE </li>
-  <p>para apoyar al higado en la desintoxicación (GLUTATION)</p>
-  <p>para eliminar la toxicidad <br> huevos(2 al día), pescado, palta, brócoli, repollo, zanahoria, ajo, cebolla, espincas, arandanos, coco, espárragos</p>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+<section id="2">
+  <h2 class="subtitulo">EL SUFRIMIENTO</h2>
+<OL>
+  <LI>Col 1,24</LI>
+  <p>Pablo, miembro de la iglesia completa en su cuerpo el sufrimiento que falta. Cristo sigue sufriendo en su iglesia</p>
+  <LI>Hch 9,4 Pablo,¿porqué me persigues?</LI>
+  <LI>1Co 3,15 Xto pagó toda la deuda</LI>
+  <LI>Heb 7,27 Una vez para siempre </LI>
+  <LI>1Pe 4,1 sufrir como cristo</LI>
+  <p>Estos textos, los 2 primeros hablan del sacrificio de cristo, fue completo; no del tema del sufrimiento. El último de semejarnos a él aún en el sufrimiento</p>
+</OL>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="03">
-  <h2 class="subtitulo">SOL</h2>
- <ol>
-  <li>al menos 10 minutos diarios</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="04">
-  <h2 class="subtitulo">AGUA</h2>
- <ol>
-  <li>Depende de varios factores: temporada, edad, actividad fisica, </li>
-  <li>la deshidratación sube la presión</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="05">
-  <h2 class="subtitulo"></h2>
- <ol>
-
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="06">
+<section id="3">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -128,7 +72,31 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="07">
+<section id="4">
+  <h2 class="subtitulo"></h2>
+  <p>
+
+  </p>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="5">
+  <h2 class="subtitulo"></h2>
+  <p>
+
+  </p>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="6">
+  <h2 class="subtitulo"></h2>
+  <p>
+
+  </p>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="7">
   <h2 class="subtitulo"></h2>
 <p>
 
