--- a/doctrinaSocial/Agenda2030.html
+++ b/doctrinaSocial/Agenda2030.html
@@ -76,13 +76,15 @@ Alianzas para lograr los objetivos (ODS 17)<br>
      </section>
      <!-- ********************************************** -->
      <section id="3">
-      <h2>Plataforma de accion de Beijing <br> 1995 Conferencia Internacional de la Mujer</h2>
+      <h2 class="cita">Plataforma de accion de Beijing <br> 1995 Conferencia Internacional de la Mujer</h2>
       <a href="https://www.acnur.org/fileadmin/Documentos/Publicaciones/2015/9853.pdf">Plataforma de accion de Beijing</a>
 <ol>
   
-  <li>106 Reconocer y afrontar las consecuencias que tienen para la salud los abortos peligrososReconocer y afrontar las consecuencias que tienen para la salud los abortos peligrosos. ... En ningún caso se debe promover el aborto como método de planificación de la familia. ... a reducir el recurso al aborto mediante la prestación de más amplios y mejores servicios de planificación de la familia. Las mujeres que tienen embarazos no deseados deben tener fácil acceso a información fidedigna y a asesoramiento comprensivo. Cualesquiera medidas o cambios relacionados con el aborto que se introduzcan en el sistema de salud se pueden determinar únicamente a nivel nacional o local de conformidad con el proceso legislativo nacional. En los casos en que el aborto no es contrario a la ley, los abortos deben realizarse en condiciones adecuadas. En todos los casos, las mujeres deberían tener acceso a servicios de calidad para tratar las complicaciones derivadas de abortos. Se deberían ofrecer con prontitud servicios de planificación de la familia, educación y asesoramiento postaborto que ayuden también a evitar la repetición de los abortos” ....</li>
+  <li>106 Reconocer y afrontar las consecuencias que tienen para la salud los abortos peligrososReconocer y afrontar las consecuencias que tienen para la salud los abortos peligrosos. ... En ningún caso se debe promover el aborto como método de planificación de la familia. ... a reducir el recurso al aborto mediante la prestación de más amplios y mejores servicios de planificación de la familia. Las mujeres que tienen embarazos no deseados deben tener fácil acceso a información fidedigna y a asesoramiento comprensivo. Cualesquiera medidas o cambios relacionados con el aborto que se introduzcan en el sistema de salud se pueden determinar únicamente a nivel nacional o local de conformidad con el proceso legislativo nacional. En los casos en que el aborto no es contrario a la ley, los abortos deben realizarse en condiciones adecuadas. En todos los casos, las mujeres deberían tener acceso a servicios de calidad para tratar las complicaciones derivadas de abortos. Se deberían ofrecer con prontitud servicios de planificación de la familia, educación y asesoramiento post-aborto que ayuden también a evitar la repetición de los abortos” ....</li>
   <li>116 entiende por aborto peligroso el procedimiento realizado por personas que no poseen las calificaciones necesarias</li>
   <li>En el año 2023 se dijo que ya han fracasado en la agenda 2030 y se plantean una nueva agenda 2045</li>
+  <li>Hay hoy 2024, más guerras, hambre, gente sin educación, contaminación  que el 2015 que se planteo la agenda</li>
+  </ol>
       <p></p>
      </section>
      <!-- ********************************************** -->
