--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -35,7 +35,7 @@
      <li class="li"><a href="#4">APOLOGÉTICA</a></li>
      <li class="li"><a href="#5"> EL AVE MARÍA </a></li>
      <li class="li"><a href="#6">MARIOLOGIA </a></li>
-     <li class="li"><a href="#7"></a></li>
+     <li class="li"><a href="#7">REINA DEL CIELO</a></li>
      <li class="li"><a href="#8"></a></li>
     </ol>
 
@@ -1135,9 +1135,26 @@ Estas razones combinadas dan una sólida base a la creencia católica en María 
 </section>
 <!-- ****************************************************************** -->
 <section id="7">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">REINA DEL CIELO</h2>
+<ol>
+  <li>María es la madre de Jesús</li>
+  <li>1Re 2:19  Vino Betsabé al rey Salomón para hablarle por Adonías. Y el rey se levantó a recibirla, y se inclinó ante ella, y volvió a sentarse en su trono, e hizo traer una silla para su madre, la cual se sentó a su diestra. <br>
+    1Re 2:20  Y ella dijo: Una pequeña petición pretendo de ti; no me la niegues. Y el rey le dijo: Pide, madre mía, que yo no te la negaré. </li>
+  <li>2Cr 15:16  Y aun a Maaca madre del rey Asa, él mismo la depuso de su dignidad, porque había hecho una imagen de Asera; y Asa destruyó la imagen, y la desmenuzó, y la quemó junto al torrente de Cedrón. </li>
+  <li>1Re 15:13  También privó a su madre Maaca de ser reina madre, porque había hecho un ídolo de Asera. Además deshizo Asa el ídolo de su madre, y lo quemó junto al torrente de Cedrón. </li>
+  <li>Dan 5:10  La reina, por las palabras del rey y de sus príncipes, entró a la sala del banquete, y dijo: Rey, vive para siempre; no te turben tus pensamientos, ni palidezca tu rostro. </li>
+  <li>Jer 13:18  Dí al rey y a la reina: Humillaos, sentaos en tierra; porque la corona de vuestra gloria ha caído de vuestras cabezas. </li>
+  <li>Luc 1:28  Y entrando el ángel en donde ella estaba, dijo: ¡Salve, muy favorecida! El Señor es contigo; bendita tú entre las mujeres. </li>
+  <li>Mar 15:18  comenzaron luego a saludarle: ¡Salve, Rey de los judíos! </li>
+</ol>
 <p>
-
+  En los tiempos bíblicos, especialmente en el contexto del antiguo Israel, el título de "reina" no solía aplicarse a las esposas del rey, sino a su madre. Estas madres eran llamadas "Gebirá" (en hebreo: גְּבִירָה), que significa "Gran Señora" o "Reina Madre". La figura de la reina madre era prominente porque en muchas sociedades antiguas, los reyes tenían numerosas esposas y concubinas, por lo que la esposa del rey no tenía una posición tan definida como la de su madre, quien a menudo tenía una influencia significativa en la corte y la política del reino.
+<br><br>
+Un ejemplo claro de esto es la reina Betsabé, la madre del rey Salomón, quien intercedió ante su hijo en asuntos importantes (1 Reyes 2:19). Ella tenía un lugar especial en el reino, siendo reconocida como la "Reina Madre". Esta tradición se ve también en otros reinos antiguos, como en Egipto y Asiria.
+<br><br>
+La práctica de que las esposas de los reyes fueran llamadas "reinas" (en el sentido moderno de la palabra) varió según las culturas y épocas. En algunas monarquías posteriores, como en los reinos europeos, la esposa del rey comenzó a ser reconocida con el título de "reina", mientras que la madre del rey seguía teniendo un rol importante, pero no necesariamente con el título de reina.
+<br><br>
+Esta transición probablemente ocurrió más claramente fuera del contexto bíblico, en las monarquías medievales y renacentistas, donde la esposa del rey adquirió más poder e importancia, en parte debido a la monogamia formalizada en los sistemas cristianos y europeos.
 </p>
 
 </section>
