--- a/salud/MedidasCarlos.html
+++ b/salud/MedidasCarlos.html
@@ -24,6 +24,9 @@
     .mg{
       background-color:  #C0C0C0;
     }
+    .k{
+      background-color: #e3e4e5;
+    }
 </style>
 </head>
 <body>
@@ -139,15 +142,15 @@
                   <td class="mg">MAGNESIO</td> 
               </tr>
               <tr>
-                  <td></td> 
-                  <td></td> 
-                  <td></td> 
-                  <td></td> 
-                  <td></td> 
-                  <td></td> 
-                  <td></td>
-                  <td></td>
-                  <td></td> 
+                  <td>PLÁTANOS</td> 
+                  <td>ESPINACAS</td> 
+                  <td>PALTAS</td> 
+                  <td>PAPAS</td> 
+                  <td>CAMOTES</td> 
+                  <td>TOMATES</td> 
+                  <td>NARANJAS</td>
+                  <td>3400 mg~</td>
+                  <td class="k">POTASIO</td> 
               </tr>
               <tr>
                   <td></td> 
