--- a/BlockGkc.html
+++ b/BlockGkc.html
@@ -7,11 +7,45 @@
 </head>
 <body>
   <h1>BLOCK</h1>
+  <h2>Mariología</h2>
   <a href="https://www.youtube.com/watch?v=Py_whLuYvNU&list=PLnSi6p8dOgsJ36f9Q_KD0ECueWzO5rtEc">Carlos Rosell 8 temas</a>
   <a href="https://www.youtube.com/watch?v=d7vva_Dx1Ec">Monseñor Munilla</a>
 <!-- /////////////////////////////////////////////////////// -->
-
-
+<h2 class="cita">POSICIÓN PROTESTANTE</h2>
+<ol>
+  <li>Dios inspiró de manera infalible las Escrituras, luego no tienen error</li>
+  <li>Todo hombre es falible, la Escritura no</li>
+  <li>Hch 2,42 Perseveraban en la doctrina Pero na había escritura</li>
+  <li>2Tes 2,15 palabra o escrita </li>
+  <li>La tradición oral se puso por escrito y es lo que tenemos por Escritura</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ol>
+<h3 class="cita">Posición Católica</h3>
+<ol>
+  <li>2Jn 12 Prefiero decirlo cara a cara</li>
+  <li>3Jn 13-14 No escribir sino hablarles cara a cara</li>
+  <li>2Tes 2,15 palabra o escrita</li>
+  <li>1Co 11,2 tradiciones PARADOSIS</li>
+  <li>La función de la tradición es dar luz en la controversias</li>
+  <li>Hch 17,1-3 Palabra oral y escrita</li>
+  <li>La Tradición abarca: las enseñanzas, prácticas y liturgias que se han preservado a lo largo del tiempo desde los apóstoles. </li>
+  <li>La Tradición es la transmisión viva de la fe cristiana, que empezó con las enseñanzas orales de los apóstoles y que ha continuado a través de los siglos en las enseñanzas de los Padres de la Iglesia, los concilios ecuménicos, la liturgia, las prácticas devocionales y los documentos oficiales de la Iglesia.</li>
+  <li>Sin embargo, parte de esta Tradición está reflejada en documentos importantes, como los decretos de los Concilios Ecuménicos, las enseñanzas de los Padres de la Iglesia, los escritos de los santos y los documentos magisteriales (como encíclicas papales).</li>
+  <h2 class="cita">Se encuentra en:</h2>
+  <li>Escritos de los Padres de la Iglesia (como San Agustín, San Atanasio, San Juan Crisóstomo, entre otros).</li>
+  <li>Concilios Ecuménicos (por ejemplo, el Concilio de Nicea, el Concilio de Calcedonia, el Concilio Vaticano II).</li>
+  <li>Catecismo de la Iglesia Católica: Un resumen oficial de la fe católica que incluye explicaciones detalladas de la Tradición. El Catecismo es una excelente fuente para entender cómo la Tradición y la Escritura se complementan.</li>
+  <li>Liturgia: La forma en que se celebra la liturgia (Misa, sacramentos, oraciones, etc.) es una expresión de la Tradición de la Iglesia.</li>
+  <li>Documentos papales y escritos magisteriales, como las encíclicas, exhortaciones apostólicas y otros documentos oficiales.</li>
+  <li>El Nuevo testamento es parte de la Tradición</li>
+  <li>El Magisterio por una promesa de Cristo debe ser infalible</li>
+</ol>
 </body>
 </html>
 <!-- /////////////////////////////////////////////////////////////// -->
