--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -60,9 +60,11 @@
           <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
           <H2 class="cita">I</H2>
           <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
-          <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
+          <li class="li"><a href="../euangelium/imagenes.html">IMÁGENES</a></li>
           <h2 class="cita">L</h2>
           <li class="li"><a href="../euangelium/laLey.html">LA LEY</a></li>
+          <h2 class="cita">M</h2>
+          <li class="li"><a href="../euangelium/Mision.html">MISIÓN</a></li>
           <H2 class="cita">O</H2>
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
           <H2 class="cita">P</H2>
