--- a/euangelium/biblia/SolaScriptura.html
+++ b/euangelium/biblia/SolaScriptura.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>APOLOGÉTICA</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -20,10 +20,7 @@
 <h1 class="init">SOLA ESCRITURA</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
-
-
 <!-- ****************************************************************** -->
-
 <section id="00">
   <hr>
   <h1> TEMAS</h1>
@@ -33,63 +30,128 @@
       <li class="li"><a href="#02">2 Tim 3,16-17</a></li>
       <li class="li"><a href="#03">EL CANON</a></li>
       <li class="li"><a href="#04">LA IGLESIA</a></li>
-      <li class="li"><a href="#05">EL HOY</a></li>
+      <li class="li"><a href="#05">APOLOGÉTICA PROTESTANTE</a></li>
       <li class="li"><a href="#06">EN LA BIBLIA</a></li>
-
     </ol>
-
   </div>
 </section>
 <!-- ****************************************************************** -->
 <section id="01">
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p> El concepto de Sola Scriptura (solo la Escritura) es una de las principales doctrinas de la Reforma Protestante del siglo XVI. Afirma que la Biblia es la única fuente de autoridad infalible para la fe y la práctica cristiana. Según esta doctrina, todas las enseñanzas y tradiciones de la Iglesia deben estar basadas únicamente en la Escritura.</p>
-  <p>donde dice que todo debe estar unicamente en la Biblia</p>
-  <p>Y si no está en la Biblia no se debe creer</p>
-  <p>Cristo no escribió ningun libro, él confió en lo que se transmitió</p>
-  <p>lo que tenemos es recuerdos e interpretaciones, más aún en el caso de Marcos y Lucas</p>
-  <P>Cual es la función de los maestros en la iglesia</P>
-  <p>Cristo manda a enseñar no a repartir Biblias; Mt 28,19, Mc 16,15, Hch 2,42</p>
-  <p>Los primeros 20 años no habia libro alguno del NT</p>
-  <p>los apostoles no practicaron ni enseñaron la sola escritura</p>
-  <p>para los primeros cristianos la biblia no era norma de fe y moral porque no tenian Biblia</p>
-  <p>Porque Pablo va a resolver un problema en Jerusalén y no lo hace con la Biblia</p>
-  <p>En el concilio de Jerusalén no se uso directamente algún texto bíblico</p>
-  <p>Donde dice la palabra SOLO</p>
-  <P> como hizo las personas hasta que apareció la Biblia 300 años después</P>
-  <p>Como la iglesia puede poner sobre si, a su obra, la Biblia</p>
-  <p>el tema es doble, la escritura y su interpretación</p>
-  <p>Si la biblia es la norma como solucionar el tema del canon, hay una lista de los 12 apóstoles pero donde encuentra una lista de los libros inspirados</p>
+  <ol>
+    <li>La biblia es la única fuente de autoridad</li>
+    <p>Autoridad exclusiva de la Biblia: La Biblia es la máxima autoridad en todo lo relacionado con la fe y la vida cristiana. No hay necesidad de autoridades externas (como la Tradición o el magisterio eclesiástico) para interpretar la voluntad de Dios. Las Escrituras contienen todo lo necesario para la salvación y la vida cristiana.</p>
+    <li> si no está en la Biblia no se debe creer</li>
+    <p>Suficiencia de la Escritura: La Biblia es suficiente para guiar a los creyentes en todo lo necesario para la salvación y la vida cristiana. No se requieren fuentes adicionales, como los decretos papales o las enseñanzas de la Iglesia, para comprender el mensaje de Dios.</p>
+    <h2 class="cita">Libros que no son mencionados</h2>
+    <p>
+      <ol>
+        <li>Nahum</li>
+        <li>Esther</li>
+        <li>Cantar de los Cantares</li>
+        <li>Eclesiastés</li>
+        <li>Abdías</li>
+        <li>Sofonías</li>
+        <li>Ageo</li>
+        <li>Habacuc</li>
+        <li>Filemón</li>
+        <li>2 y 3 Juan</li>
+        <li>Tito</li>
+      </ol>
+    </p>
+    <h2 class="cita">Libros que son mencionados y no están en la Biblia</h2>
+    <p>
+      <ol>
+        <li>El Libro de las Batallas de Yahweh: Mencionado en Números 21:14.</li>
+        <li>El Libro del Justo o Jasher: Mencionado en Josué 10:13 y 2 Samuel 1:18.</li>
+        <li>El Libro de los Actos de Salomón: Mencionado en 1 Reyes 11:41.</li>
+        <li>El Libro de las Crónicas de los Reyes de Israel y Judá: Mencionado en 1 Reyes 14:19 y 2 Crónicas 9:29.</li>
+        <li>El Libro de Natán el Profeta, el Libro de Gad  el Vidente (1 Crónicas 29:29;) </ol>
+        <li> el Libro de Iddo el Vidente ( 2 Crónicas 9:29):</li>
+        <li>El Libro de las Crónicas del Rey David (1 Crónicas 27:24):</li>
+      </ol>
+    </p>
+    <li>La biblia se explica sola, no necesita interprete</li>
+    <p>La negación de la autoridad de la Tradición: Según Sola Scriptura, las tradiciones humanas, aunque pueden tener valor en contextos específicos, no son vinculantes ni tienen autoridad sobre la fe de los creyentes. Esto se contrapone al catolicismo, donde la Tradición y el magisterio también son fuentes de revelación.</p>
+    <li>La doctrina debe de estar clara y concretamente explicitada</li>
+    <p>Claridad de la Escritura: La Biblia es clara en sus enseñanzas fundamentales sobre la salvación, y cualquier cristiano, con la ayuda del Espíritu Santo, puede comprender las doctrinas esenciales. Esto implica que los creyentes no necesitan un sacerdote o una estructura jerárquica para interpretar correctamente las Escrituras.</p>
+  </ol>
+ <p>
+ <h2 class="cita">Fundamentos bíblicos de Sola Scriptura:</h2>
+1. 2 Timoteo 3:16-17: "Toda la Escritura es inspirada por Dios, y útil para enseñar, para reprender, para corregir y para instruir en la justicia, a fin de que el hombre de Dios sea perfecto, enteramente capacitado para toda buena obra."
+   - Este pasaje es central para la Sola Scriptura porque afirma que la Escritura es suficiente y útil para guiar a los creyentes.
+   <br><br>
+2. Hechos 17:11: "Estos eran más nobles que los de Tesalónica, pues recibieron la palabra con toda solicitud, escudriñando cada día las Escrituras para ver si estas cosas eran así."
+   - Los aquí mencionados son elogiados por verificar en las Escrituras si las enseñanzas de Pablo eran verdaderas, lo que refuerza la idea de que la Biblia es la autoridad máxima.
+   <br><br>
+3. Isaías 8:20: "¡A la ley y al testimonio! Si no dijeren conforme a esto, es porque no les ha amanecido."
+   - Este pasaje es utilizado para resaltar que las enseñanzas y doctrinas deben estar en conformidad con la Escritura, de lo contrario, no tienen valor.
+   <br><br>
+4. Marcos 7:8-9: "Porque dejando el mandamiento de Dios, os aferráis a la tradición de los hombres... Bien invalidáis el mandamiento de Dios para guardar vuestra tradición."<br>
+   - Jesús critica a los fariseos por poner las tradiciones humanas por encima de los mandamientos de Dios, lo que los defensores de Sola Scriptura utilizan como base para rechazar la Tradición eclesial.
+ </p>
+ <h2 class="subtitulo">Por Entender</h2>
+ <ol>
+   <li>No hay ningún texto que diga que la Biblia es la única fuente de doctrina </li>
+   <li>2Tim 3,16-17 todo lo que dice es verdad, no dice que la Escritura es la ÚNICA</li>
+   <li>En que parte de la biblia nos habla del cristiano y la anti-concepción, si es pecado o no lo es; y donde está eso en la biblia</li>
+   <li>Todas las sectas protestantes desde 1930 las declararon licitas con la resolución 15 de 1930 por la Iglesia Anglicana y será el inicio de una cascada </li>
+   <li>La iglesia católica responde que es un pecado en 1930 y en 1968 se declara excomulgada a la persona que aborta, ayuda o realiza el aborto o la anti-concepción abortiva</li>
+   <li>Cristo no escribió ningún libro, él confió en lo que se transmitió</li>
+   <li>lo que tenemos es recuerdos e interpretaciones, más aún en el caso de Marcos y Lucas, como verificamos su inspiración</li>
+  <li>No decimos que no sea una fuente fundamental, sino que no es la única </li>
+  <li>Cual es la función de los maestros en la iglesia</li>
+  <li>Actualmente no van y reparten biblias, sino que primero los adoctrinan y luego les dan la biblia, y junto a esto los guían en la interpretación</li>
+  <li>Cristo manda a enseñar no a repartir Biblias; Mt 28,19, Mc 16,15, Hch 2,42</li>
+  <li>Los primeros años no había libro alguno del NT (1Tes 51~; Apocalipsis 90~) </li>
+  <li>los apóstoles no practicaron ni enseñaron la sola escritura</li>
+  <li>para los primeros cristianos la biblia no era norma de fe y moral porque no tenían Biblia</li>
+  <li>Porque Pablo va a resolver un problema en Jerusalem y no lo hace con la Biblia</li>
+  <li>En el concilio de Jerusalem no se uso directamente ningún texto bíblico</li>
+  <li>Donde dice la palabra SOLO</li>
+  <li> como hizo las personas hasta que apareció la Biblia 300 años después</li>
+  <li>Como la iglesia puede poner sobre si, a su obra, la Biblia</li>
+  <li>el tema es doble, la escritura y su interpretación</li>
+  <li>Si la biblia es la norma como solucionar el tema del canon, hay una lista de los 12 apóstoles pero donde encuentra una lista de los libros inspirados</li>
+  <li> El sitio web indica que hay entre 34.000 - 45,000 denominaciones cristianas en el mundo 2021<br>
+    <a href="https://thecompletepilgrim.com/many-churches-denominations-america-world/?form=MG0AV3">Enlace</a></li>
+  <li>Ver World Christian Encyclopedia</li>
+</ol>
 </section>
-<!-- ****************************************************************** -->
+<!-- ****************+************************************************** -->
 <section id="02">
   <h2 class="subtitulo">2Tim 3,16-17</h2>
   <p>La inspiración divina de la Biblia: Se cree que la Escritura fue inspirada directamente por Dios, lo que la convierte en una autoridad suprema (2 Timoteo 3:16-17). Según esta visión, la Escritura es suficiente para guiar a los cristianos en todas las cuestiones de fe y moral. </p>
   <p>La suficiencia de la Biblia: La doctrina sostiene que la Escritura contiene todo lo necesario para la salvación y la vida cristiana, por lo que no se requiere ninguna fuente externa (como la tradición o la autoridad eclesial) para entender el mensaje de Dios.</p>
   <p>El rechazo de las tradiciones eclesiásticas: Durante la Reforma Protestante, se argumentó que muchas de las tradiciones de la Iglesia Católica no tenían fundamento bíblico claro, lo que llevó a rechazar cualquier enseñanza o práctica que no pudiera justificarse directamente con la Biblia. Ejemplos incluyen la veneración de santos, indulgencias y el purgatorio.</p>
   <p>La claridad de la Escritura: Según los defensores de esta doctrina, la Biblia es lo suficientemente clara para que cualquier creyente, con la guía del Espíritu Santo, pueda interpretarla correctamente. No es necesario que una autoridad externa interprete la Escritura de manera oficial.</p>
-
-
-
 </section>
 <!-- ****************************************************************** -->
 <section id="03">
   <h2 class="subtitulo">EL CANON</h2>
   <p> 2 Tesalonicenses 2:15 se usa para justificar la importancia de la tradición: “Manteneos firmes y guardad las tradiciones que os hemos enseñado, ya de palabra o por carta”.  </p>
   <p>La historia de la formación del canon bíblico: Los que no defienden la Sola Scriptura argumentan que la misma Biblia fue compilada y reconocida por la Iglesia en los primeros siglos del cristianismo. El proceso de discernimiento de qué libros formarían parte del canon bíblico fue realizado por la Iglesia, lo que indica que la Iglesia precede a la Escritura en autoridad.</p>
-
 </section>
 <!-- ****************************************************************** -->
 <section id="04">
-  <h2 class="subtitulo">LA IGLESIA </h2>
+  <h2 class="subtitulo">LA IGLESIA: TRADICIÓN Y MAGISTERIO </h2>
   <p>La autoridad de la Iglesia: La doctrina católica enseña que el Magisterio de la Iglesia (la autoridad de enseñanza, encabezada por el Papa y los obispos) tiene la responsabilidad de interpretar correctamente la Escritura y la Tradición. La Iglesia fue fundada por Cristo (Mateo 16:18-19), y los apóstoles recibieron la autoridad de predicar y enseñar. Sin la guía de la Iglesia, se cree que la interpretación privada de la Escritura puede llevar a errores.</p>
-
 </section>
 <!-- ****************************************************************** -->
 <section id="05">
-  <h2 class="subtitulo">EL HOY </h2>
+  <h2 class="subtitulo">POSICIÓN PROTESTANTE</h2>
   <p>La insuficiencia de la Escritura como única fuente: Se sostiene que la Biblia no lo contiene todo explícitamente. Por ejemplo, temas como la Trinidad y el bautismo infantil, aunque apoyados por la Escritura, no están claramente definidos sin la interpretación y el desarrollo de la Tradición.</p>
-
+  <h2 class="cita">Desarrollo Protestante</h2>
+  <ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
 </section>
 <!-- ****************************************************************** -->
 <section id="06">
@@ -111,7 +173,6 @@
     2Pe 1:21  porque nunca la profecía fue traída por voluntad humana, sino que los santos hombres de Dios hablaron siendo inspirados por el Espíritu Santo. </li>
 <li>2Pe 3:16  casi en todas sus epístolas, hablando en ellas de estas cosas; entre las cuales hay algunas difíciles de entender, las cuales los indoctos e inconstantes tuercen, como también las otras Escrituras, para su propia perdición. </li>
  </ol>
-
 </section>
 <!-- ****************************************************************** -->
 <section id="07">
